# rag

./: ._00_INHALTSVERZEICHNIS_DEEPDIVE 5.md  ._11_Benni_Universe_und_Digitale_Reinkarnation 5.md  ._12_GODWAND_vOmegaLUX 4.md  ._12_GODWAND_vOmegaLUX 5.md  ._14_Therapie_GPTs_und_KI_Psychologie 4.md  ._14_Therapie_GPTs_und_KI_Psychologie 5.md  ._26_Schlafender_ADAM 5.md  ._30_MC_Polle_Phaenomenologie_des_Beats.md  ._Benni_Kompendium_2025-04-04_23-03-09.txt  ._Chat GPT local installation 2.md  ._CoreSevÔÇÖrik 2.md  ._Dokument (1) 3.docx  ._Ein Fru╠êhdienst auf der Intensivstation.docx  ._MeshGPT.docx  ._Text 14.txt  ._Text 15.txt  ._Text 17.txt  ._Text 28.txt  ._Text 29.txt  ._Unicode Table 5.md  ._client_secret_159471202902-lhcj6eak58hgm1rrc0oiah2s23hqqal9.apps.googleusercontent.com (1).json  ._console.cloud.google.com.html  ._conversations.json_chunk_2 2.json  ._conversations.json_chunk_2.json  .editorconfig  .gitattributes  .gitignore  01464_Unity_Installation_auf_Arch.md  01469_Custom-GPT_vs_System-Prompt.md  01482_Videobearbeitung_Anfrage.md  01483_Levan_Polkka_Analyse.md  01485_GPT_Prompting_und_Skills.md  01489_Heldenreise_des_Ichs.md  01490_VR_Klinik_Konzept_Entwicklung.md  01491_Neuroversum_Anleitung_Iteration.md  01494_Schattenarchiv_Datenstruktur_Aufbau.md  01496_Datenkompilierung_und_Vorhaben.md  01504_Automatisierung_von_Bestätigungen.md  01510_Innovative_App_Entwicklung.md  01511_Notion_Vault_Strukturierung.md  (+36 more)
app/: __init__.py  main.py
cognidistill/: __init__.py  cli.py  config.py  entities.py  knowledge_base.py  openai_custom_entity.py  parsing.py  (+1 more)
(+45 files in other folders)
